--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ publishdir          = "public"
 author              = "Pablo Cordero"
 title               = "Hyperparameter Space"
 pygmentsuseclasses  = true
-disqusshortname     = "hyperpspace" # Comment out to disable Disqus.
+disqusshortname     = "hyperparameter" # Comment out to disable Disqus.
 pluralizelisttitles = false
 googleAnalytics     = "UA-123-45"
 
@@ -29,7 +29,7 @@ identifier             = "about"
 url                    = "/about/"
 
 [params]
-latestpostscount       = 5                             # how many posts to display on the home page
+latestpostscount       = 0                             # how many posts to display on the home page
 i18n_flags             = false                         # whether to display small country flags for available translations
 author                 = "Pablo Cordero"
 cachebuster            = true                          # add the current unix timestamp in query string for cache busting css assets
@@ -40,6 +40,7 @@ email                  = "dimenwarper@gmail.com"
 #extracssfiles          = [ "/css/override.css" ]       # In your `static` directory, add/remove files as necessary.
 #faviconfile            = "img/leaf.ico"
 github                 = "//github.com/dimenwarper"
+scholar                = "//scholar.google.com/citations?user=nGEthnYAAAAJ&hl=en"
 highlightjs            = true
 lang                   = "en"
 linkedin               = "//linkedin.com/in/sergio-pablo-cordero/"
